Доработки в Compilation Request и Event